@@ -1,0 +1,12 @@
+    |-----handy-ruler------------------------------------------------------|
+aero: aero (mouse cursor theme)
+aero:
+aero: This is Aero, a series of mouse cursor themes heavily inspired from 
+aero: Microsoft Windows Seven.
+aero: 
+aero: 
+aero: 
+aero:
+aero: 
+aero:
+aero: Package created by Niki Kovacs <info@microlinux.fr> 
