@@ -1,0 +1,1 @@
+faenza-icon-theme*.zip
