@@ -1,0 +1,96 @@
+#!/bin/sh
+
+# Slackware Package Build Script for Faenza icon theme
+# Home Page: https://code.google.com/p/faenza-icon-theme/
+
+# Copyright (c) 2011, Nishant Limbachia, Hoffman Estates, IL, USA
+# <nishant _AT_ mnspace _DOT_ net>
+# All rights reserved.
+
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+
+# 1. Redistributions of script must retain the above copyright notice,
+#    this list of conditions and the following disclaimer.
+
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+# LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+# NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#
+# Modified by Niki Kovacs <info@microlinux.fr>
+
+PRGNAM="faenza-icon-theme"
+VERSION=${VERSION:-1.3}
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}
+
+ARCH=noarch ## hardcode ARCH
+
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+CWD=$(pwd)
+
+set -e
+
+# default is to not install emesene theme, if you need this
+# run the script with EMESENE=yes
+EMESENE=${EMESENE:-no}
+
+if [ ! -r ${PRGNAM}_${VERSION}.zip ] ; then
+   wget -c --no-check-certificate \
+     https://${PRGNAM}.googlecode.com/files/${PRGNAM}_${VERSION}.zip
+fi
+
+md5sum -c ${PRGNAM}_${VERSION}.zip.md5
+
+rm -fr $TMP/${PRGNAM}_${VERSION} $PKG
+mkdir -p $TMP $PKG $OUTPUT $TMP/${PRGNAM}_${VERSION}
+cd $TMP/${PRGNAM}_${VERSION}
+unzip $CWD/${PRGNAM}_${VERSION}.zip
+chown -R root.root .
+find . -type f -exec chmod 644 {} \;
+find . -type d -exec chmod 755 {} \;
+
+TARBALLS="Faenza-Ambiance Faenza-Dark Faenza-Darker Faenza-Darkest Faenza-Radiance Faenza"
+
+for i in $TARBALLS; do
+    tar -xvf $i.tar.gz
+done
+
+mkdir -p $PKG/usr/share/icons
+cp -a Faenza \
+  Faenza-Dark \
+  Faenza-Darker \
+  Faenza-Darkest \
+  Faenza-Ambiance \
+  Faenza-Radiance \
+  $PKG/usr/share/icons/
+
+if [ "$EMESENE" = "yes" ]; then
+  tar -xvf emesene-faenza-theme.tar.gz
+  cp -a emesene $PKG/usr/share
+fi
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+cp AUTHORS COPYING ChangeLog README $PKG/usr/doc/$PRGNAM-$VERSION
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf ${PRGNAM}_${VERSION} $PKG
