@@ -1,0 +1,1 @@
+e9bd6106d13017ce06d24b586259ae9c  faenza-icon-theme_1.3.zip
