@@ -1,0 +1,12 @@
+                 |-----handy-ruler---------------------------------------------------|
+faenza-icon-theme: faenza-icon-theme (icon theme)
+faenza-icon-theme:
+faenza-icon-theme: Repackaging of the popular Faenza icon theme for GNOME and Xfce.
+faenza-icon-theme:
+faenza-icon-theme:
+faenza-icon-theme: 
+faenza-icon-theme:
+faenza-icon-theme:
+faenza-icon-theme:
+faenza-icon-theme:
+faenza-icon-theme: Package created by Niki Kovacs <info@microlinux.fr>
