@@ -1,0 +1,82 @@
+#!/bin/bash
+
+# Slackware build script for Faenza Xfce icon theme
+
+# Copyright 2011  Fridrich von Stauffenberg <cancellor2@gmail.com>
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ''AS IS'' AND ANY EXPRESS OR IMPLIED
+# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO
+# EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#
+# Modified by Niki Kovacs <info@microlinux.fr>
+
+PRGNAM=faenza-xfce
+VERSION=${VERSION:-0.2.1}
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}
+
+ORIG_PRGNAM=Faenza-Xfce
+ORIG_FILENAME=shimmerproject-$ORIG_PRGNAM
+ORIG_DIRNAME=$ORIG_FILENAME-54290e6
+ORIG_VERSION=v.$VERSION-0-gd3e85cf
+
+ARCH=noarch
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+set -e
+
+# Add the '--content-disposition' flag to 'wget' to circumvent a curious bug
+# when downloading the tarball
+if [ ! -r ${ORIG_FILENAME}-${ORIG_VERSION}.tar.gz ] ; then
+   wget -c --no-check-certificate --content-disposition \
+     https://github.com/shimmerproject/${ORIG_PRGNAM}/tarball/v.${VERSION}/${ORIG_FILENAME}-${ORIG_VERSION}.tar.gz
+fi
+
+md5sum -c ${ORIG_FILENAME}-${ORIG_VERSION}.tar.gz.md5
+
+rm -rf $PKG
+mkdir -p $OUTPUT $TMP $PKG/usr/share/icons
+cd $PKG/usr/share/icons
+tar xvf $CWD/$ORIG_FILENAME-$ORIG_VERSION.tar.gz
+chown -R root:root .
+find . -type f -name '.*' -delete
+find . -type f -exec chmod 644 {} \;
+find . -type d -exec chmod 755 {} \;
+
+mv $ORIG_DIRNAME $ORIG_PRGNAM
+cd $ORIG_PRGNAM
+sed -i '/^Inherits/s/-Dark,Faenza/,Faenza-Dark/' index.theme
+find . -type f -name '*.svg.png' | while read i ; do mv $i ${i/.svg/} ; done
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+mv README $PKG/usr/doc/$PRGNAM-$VERSION
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -c n -l y $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $ORIG_PRGNAM $PKG
