@@ -1,0 +1,12 @@
+               |-----handy-ruler------------------------------------------------------|
+xfwm4-theme-axe: xfwm4-theme-axe (window manager theme for Xfce)
+xfwm4-theme-axe:
+xfwm4-theme-axe: Axe is a minimalistic theme for Xfce's window manager.
+xfwm4-theme-axe: 
+xfwm4-theme-axe: 
+xfwm4-theme-axe: 
+xfwm4-theme-axe: 
+xfwm4-theme-axe:
+xfwm4-theme-axe: 
+xfwm4-theme-axe: 
+xfwm4-theme-axe: Package created by Niki Kovacs <info@microlinux.fr>
