@@ -1,0 +1,54 @@
+#!/bin/sh
+
+# Slackware build script for xfwm4-theme-axe
+
+# Written by Niki Kovacs <info@microlinux.fr)
+
+PRGNAM=xfwm4-theme-axe
+VERSION=${VERSION:-1.0}	 
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}		
+
+ARCH=noarch
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}	
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}	
+
+set -e 
+
+if [ ! -r 73291-axe.tar.gz ] ; then
+   wget -c http://xfce-look.org/CONTENT/content-files/73291-axe.tar.gz
+fi
+
+md5sum -c 73291-axe.tar.gz.md5
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+cd $TMP
+rm -rf axe*
+tar xvf $CWD/73291-axe.tar.gz || exit 1
+
+mkdir -p $PKG/usr/share/themes
+mv axe* $PKG/usr/share/themes
+
+chown -R root:root .
+find . \
+ \( -perm 777 -o -perm 775 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+ -exec chmod 755 {} \; -o \
+ \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+ -exec chmod 644 {} \;
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $PRGNAM-$VERSION $PKG
